EP-44 Same key startup JVM Options are overwritten